# Aurus-Engine

./: .gitignore  Aurus Engine.sln  Aurus Engine.vcxproj  Aurus Engine.vcxproj.filters  AurusEngine  CMakeLists.txt  README.md  packages.config
.devfiles/: CharData.xlsx
.src/: CMakeLists.txt  aurusscript.c  battle.c  battlehandler.c  char.c  charhandler.c  filehandler.c  main.c  map.c  maphandler.c  misc.c
cmake/modules/: FindLibXml2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_sound.cmake  FindSDL2_ttf.cmake
data/localization/english/: text.yml
data/map/: map_1_1.tmx
include/: AurusScript.c  ai.h  aurusscript.h  battle.h  battleGL.h  char.h  dialogue.h  filehandler.h  global.h  graphics.h  inventory.h  libBINion.h  map.h  misc.h  skills.h  types.h
